Fixed spacing issue between sections

--- a/src/sections/FAQ/style.module.scss
+++ b/src/sections/FAQ/style.module.scss
@@ -11,7 +11,7 @@
     color: white;
     margin: auto;
     width: 65%;
-    padding-top: 100px;
+    padding-top: 10px;
     padding-bottom: 50px;
 
 
